--- a/A03/Makefile
+++ b/A03/Makefile
@@ -1,3 +1,12 @@
-CC=gcc
-% :: %.c
-	$(CC) -g $< -o $@
+magic_square : magic_square.c
+	gcc magic_square.c -o magic_square
+
+match_braces : match_braces.c 
+	gcc match_braces.c -o match_braces
+
+sorted_snackbar : sorted_snackbar.c 
+	gcc sorted_snackbar.c -o sorted_snackbar
+
+clean:
+	sorted_snackbar match_braces magic_square
+	
